fix dark mode by App.jsx

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-body {
+/* body {
   background-color: black; 
   font-family: 'Arial', sans-serif; 
   margin: 0; 
-}
+} */
 
 #navbar {
   position: fixed;
@@ -15,6 +15,7 @@ body {
   padding: 1rem; 
   color: white; 
   font-weight: bold; 
+  background-color: rgba(0, 0, 0, 0.8); 
   z-index: 1000; 
   font-size: 20px;
   height: 70px
@@ -195,7 +196,6 @@ HomePage.css
 
 #startNowBtn:active {
   opacity: 0.5;
-
 }
 /* ---------------- category------------------------------------------------------------- */
 .category-info {
@@ -318,5 +318,11 @@ HomePage.css
   font-size: 1rem;
   transition: box-shadow 0.2s, transform 0.2s;
   display: inline-block;
+}
+body, html {
+  background-color: #000000;  /* or try #121212 for softer black */
+  color: #f0f0f0;
+  margin: 0;
+  font-family: 'Arial', sans-serif;
 }
 
